# EntropIA-Pro-Lite

./: README.md  opencode.json  package.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/runtime-pack/linux-x86_64/: manifest.json
apps/desktop/src-tauri/resources/runtime-pack/windows-x86_64/: manifest.json
apps/desktop/src-tauri/scripts/: runtime-pack-smoke.py  transcribe.py  windows-feature-contract.ps1
apps/desktop/src-tauri/src/: image_edit.rs  lib.rs  python_discovery.rs  settings.rs
apps/desktop/src-tauri/src/db/: commands.rs
apps/desktop/src-tauri/src/llm/: commands.rs  mod.rs  prompt.rs
apps/desktop/src-tauri/src/nlp/: embeddings.rs  mod.rs
apps/desktop/src-tauri/src/ocr/: mod.rs  pdf.rs  provider.rs
apps/desktop/src-tauri/src/rag/: commands.rs
apps/desktop/src-tauri/src/runtime/: bootstrap.rs  bootstrap_types.rs  mod.rs
apps/desktop/src-tauri/src/sync/: apply.rs  blobs.rs  capture.rs  cascade.rs  commands.rs  engine.rs  http.rs  mod.rs  pull.rs  push.rs  schema.rs  session.rs  test_support.rs
apps/desktop/src-tauri/src/sync/apply/: tests.rs
apps/desktop/src-tauri/src/sync/engine/: tests.rs
apps/desktop/src-tauri/src/sync/pull/: tests.rs
apps/desktop/src-tauri/tests/: sync_e2e.rs
apps/desktop/src-tauri/tests/fixtures/: schema_full.sql
apps/desktop/src/layout/: AppShell.svelte  AppShell.test.ts  NotificationBell.svelte  NotificationBell.test.ts  SyncStatusIndicator.svelte  SyncStatusIndicator.test.ts  TopBar.svelte  TopBar.test.ts
apps/desktop/src/lib/: db.ts  i18n.ts  notification-store.test.ts  notification-store.ts  runtime-packaging.test.ts  sync-store.test.ts  sync-store.ts  sync.test.ts  sync.ts
apps/desktop/src/views/: CollectionView.svelte  CollectionView.test.ts  CollectionsView.svelte  CollectionsView.test.ts  DependenciasTab.svelte  DependenciasTab.test.ts  ItemView.svelte  ItemView.test.ts  SettingsView.svelte  SyncSettingsCard.svelte  SyncSettingsCard.test.ts
